<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="team.y2k2.globa.main.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayout_search_frame"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search_frame"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/textview_search_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:importantForAccessibility="no"
                android:src="@drawable/search_gray" />

            <EditText
                android:id="@+id/edittext_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/activity_search_keyword"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.searchText}"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textview_search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/notosans_regular"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> viewModel.onCancelClick()}"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/linearlayout_search_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/linearlayout_search_frame" />

        <TextView
            android:id="@+id/textview_search_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/activity_search_currently"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/linearlayout_search_frame"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_search_frame" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_search_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:visibility="@{viewModel.isSearchResultEmpty ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textview_search_history_title"
            app:layout_constraintTop_toBottomOf="@id/textview_search_history_title"
            tools:listitem="@layout/item_search_docs" />

        <TextView
            android:id="@+id/textview_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="검색 결과가 없습니다."
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:visibility="@{viewModel.isSearchResultEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_search_frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>