...
                <RelativeLayout
                    android:id="@+id/relativelayout_main_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageview_main_top"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/gradient_main"
                        android:importantForAccessibility="no" />

                    <androidx.viewpager.widget.ViewPager
...
                        android:fontFamily="@font/koho_bold"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                    <ImageButton
                        android:id="@+id/image_button_main_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="60dp"
                        android:clickable="true"
...
