...
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/document" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_document_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
